--- a/src/css/App.css
+++ b/src/css/App.css
@@ -39,3 +39,7 @@ span:hover {
     from { transform: rotate(0deg); }
     to { transform: rotate(360deg); }
 }
+
+#rules {
+    margin-top : 20px;
+}
